# pkg/apiserver/database/gorm/odata.go
@@ -879,6 +879,108 @@ var schemaMetas = map[string]odatasql.SchemaMeta{
 			},
 		},
 	},
+	scanEstimationSchemaName: {
+		Table: "scan_estimations",
+		Fields: odatasql.Schema{
+			"id": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			//"name":      odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			//"revision":  odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			"startTime": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			"endTime":   odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			//"scanConfig": odatasql.FieldMeta{
+			//	FieldType:            odatasql.RelationshipFieldType,
+			//	RelationshipSchema:   "ScanConfig",
+			//	RelationshipProperty: "id",
+			//},
+			//"scope": odatasql.FieldMeta{
+			//	FieldType:             odatasql.ComplexFieldType,
+			//	ComplexFieldSchemas:   []string{"AwsScanScope"},
+			//	DiscriminatorProperty: "objectType",
+			//},
+			//"timeoutSeconds": odatasql.FieldMeta{
+			//	FieldType: odatasql.PrimitiveFieldType,
+			//},
+			//"maxParallelScanners": odatasql.FieldMeta{
+			//	FieldType: odatasql.PrimitiveFieldType,
+			//},
+			//"assetScanTemplate": odatasql.FieldMeta{
+			//	FieldType:           odatasql.ComplexFieldType,
+			//	ComplexFieldSchemas: []string{"AssetScanTemplate"},
+			//},
+			"assetIDs": odatasql.FieldMeta{
+				FieldType: odatasql.CollectionFieldType,
+				CollectionItemMeta: &odatasql.FieldMeta{
+					FieldType: odatasql.PrimitiveFieldType,
+				},
+			},
+			"state": odatasql.FieldMeta{
+				FieldType: odatasql.PrimitiveFieldType,
+			},
+			"stateMessage": odatasql.FieldMeta{
+				FieldType: odatasql.PrimitiveFieldType,
+			},
+			"stateReason": odatasql.FieldMeta{
+				FieldType: odatasql.PrimitiveFieldType,
+			},
+			"estimation": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"Estimation"},
+			},
+			"scanTemplate": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"ScanTemplate"},
+			},
+			"summary": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"ScanEstimationSummary"},
+			},
+		},
+	},
+	"Estimation": {
+		Fields: odatasql.Schema{
+			"time": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			"size": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			"cost": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType}, // TODO are we handling float numbers in the db?
+		},
+	},
+	"ScanEstimationSummary": {
+		Fields: odatasql.Schema{
+			"jobsLeftToRun": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			"jobsCompleted": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+		},
+	},
+	assetScanEstimationsSchemaName: {
+		Table: "asset_scan_estimations",
+		Fields: odatasql.Schema{
+			"id": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+			"asset": odatasql.FieldMeta{
+				FieldType:            odatasql.RelationshipFieldType,
+				RelationshipSchema:   assetSchemaName,
+				RelationshipProperty: "id",
+			},
+			"scanEstimation": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"ScanEstimationFakeRelationship"},
+			},
+			"estimation": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"Estimation"},
+			},
+			"assetScanTemplate": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"AssetScanTemplate"},
+			},
+			"state": odatasql.FieldMeta{
+				FieldType:           odatasql.ComplexFieldType,
+				ComplexFieldSchemas: []string{"AssetScanEstimationState"},
+			},
+		},
+	},
+	"ScanEstimationFakeRelationship": {
+		Fields: odatasql.Schema{
+			"id": odatasql.FieldMeta{FieldType: odatasql.PrimitiveFieldType},
+		},
+	},
 }
 
 func ODataQuery(db *gorm.DB, schema string, filterString, selectString, expandString, orderby *string, top, skip *int, collection bool, result interface{}) error {
